--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,8 @@ nav{
     flex-wrap: nowrap;
     align-items: stretch;
     box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.35);
+    background-color: rgba(253, 251, 230, 0.75);
+    padding: 1%;
     
 }
 
@@ -16,14 +18,22 @@ nav li{
     list-style-type: none;
     display: inline-block;
     padding: 2vh;
+    margin-right: 50px;
+    transition: 0.1s;
+
+}
+nav li:hover{
+    transition: 0.5s;
+    font-size: 1.5rem;
 
 }
 nav a{
     text-decoration: none;
     color: #0A0A0A;
     font-size: 1.25rem;
-
+    
 }
+
 nav h1{
     font-size: 2.25rem;
     margin: auto;
@@ -42,8 +52,9 @@ nav h1{
 .col-1{ /* Right side */
     grid-column: 2 / span 2;
     grid-row: 1 / 1;
-    margin-top: 20%;
+    margin-top: 1%;
     padding: 10%;
+    text-align: center;
 }
 .col-2{ /* Left side */
     grid-column: 1 / 2;
@@ -54,7 +65,9 @@ nav h1{
 
 .col-2 h1{
     font-size: 2.25rem;
-    text-shadow: 0px 10px 5px  rgba(255, 255, 255, 0.75);
+}
+.col-1 h1{
+    font-size: 2.25rem;
 }
 
 figure{
@@ -64,15 +77,113 @@ figure{
 .profileImg{
     width: 50%;
     border-radius: 100%;
+    transition: 0.1s;
+    border: 2px solid rgba(23, 23, 23, 0.69);
+}
+.profileImg:hover{
+    width: 60%;
+    transition: 0.5s;
 }
 
 .aboutText{
-    font-size: large;
+    font-size: 1.45rem;
     font-weight: 550;
     line-height: 2;
+    text-align: center;
 }
 
 figcaption h3{
     font-weight: 500;
     font-size: 1.25rem;
+    color: rgb(74, 74, 74);
+}
+
+#skills{
+    text-align: center;
+}
+
+#skills i{
+    padding: 1%;
+    font-size: 2.5rem;
+}
+
+#skills h1{
+    font-size: 2.25rem;
+}
+
+#contact{
+    text-align: center;
+    padding: 1%;
+}
+
+#contact a{
+    font-size: 1.25rem;
+    margin: auto;
+    text-decoration: none;
+    color: #0A0A0A;
+}
+
+footer{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    box-shadow: 0px -5px 3px 0px rgba(0,0,0,0.35);
+    background-color: rgba(253, 251, 230, 0.75);
+    margin:auto;
+    padding: 1%;
+}
+footer ul{
+    list-style-type: none;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+footer a{
+    text-decoration: none;
+    color: #0A0A0A;
+    font-size: 1.1rem;
+    text-align: center;
+  
+}
+
+footer h1{
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.heading{
+    text-align: center;
+}
+
+.grid-cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    gap: 5px;
+    text-align: center;
+    padding: 2%;
+}
+
+.cardImg{
+    width:25%;
+    height: 50%;
+}
+.cardText{
+    padding: 10%;
+}
+
+.card-1 i{
+    color: #0A0A0A;
+    font-size: 3rem !important;
+}
+.card-1 a{
+    color: #0A0A0A;
+    font-size: 2rem;
+    text-decoration: none;
+}
+
+.card-1 a:hover{
+    color: #6a6a6a;
+    font-size: 2rem;
+    text-decoration: none;
 }
