--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,6 +41,7 @@ nav h1{
 
 #iconButton{
     font-size: 1.5rem;
+    display: block;
 }
 
 .grid{
@@ -145,6 +146,10 @@ footer a{
     text-align: center;
   
 }
+footer a:hover{
+    color: #cdcdcd;
+  
+}
 
 footer h1{
     margin-top: auto;
@@ -153,6 +158,7 @@ footer h1{
 
 .heading{
     text-align: center;
+    font-size: 1.25rem;
 }
 
 .grid-cards{
@@ -170,10 +176,23 @@ footer h1{
 }
 .cardText{
     padding: 10%;
+    font-size: 1.1rem;
+}
+.cardHeading{
+    font-size: 2rem;
+}
+.cardSubHeading{
+    font-size: 1.5rem;
 }
 
-.card-1 i{
+.cardGitHub{
     color: #0A0A0A;
+    font-size: 3rem !important;
+    margin-bottom: 2%;
+}
+
+.card-1 i:hover{
+    color: #6a6a6a;
     font-size: 3rem !important;
 }
 .card-1 a{
@@ -181,9 +200,75 @@ footer h1{
     font-size: 2rem;
     text-decoration: none;
 }
+.dropdownBtn{
+    display: none;
+}
 
 .card-1 a:hover{
     color: #6a6a6a;
     font-size: 2rem;
     text-decoration: none;
+}
+@media only screen and (max-width: 1275px){
+    nav h1{
+       display: none;
+    }
+}
+
+@media only screen and (max-width: 900px){
+    #iconButton{
+        display: block ;
+    }
+    nav #iconButton {
+        display: none ;
+    }
+}
+
+@media only screen and (max-width: 725px) {
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 0px;
+    }
+    .col-1 { /* Right side */
+        grid-row: 1 / 2;
+        grid-column: 1; /* Add this line to ensure they are in the same column */
+        text-align: center;
+    }
+    .col-2 { /* Left side */
+        grid-row: 2 / 3; /* Adjusted grid-row value */
+        grid-column: 1; /* Add this line to ensure they are in the same column */
+        text-align: center;
+        margin: auto;
+        
+    }
+    .dropdownBtn{
+        display: block;
+        font-size: 2rem;
+    }
+    nav li{
+        display: none;
+    }
+    footer{
+        display: block;
+        padding-top: 5%;
+        text-align: center;
+    }
+    #contact{
+        padding: 4%;
+    }
+    footer ul{
+        padding: 2%;
+        margin: auto;
+        padding-left: 0;
+    }
+    .grid-cards{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 5px;
+        text-align: center;
+        padding: 2%;
+    }
+    
+  
 }
