--- a/stylesheet.css
+++ b/stylesheet.css
@@ -159,11 +159,12 @@ footer h1{
 .heading{
     text-align: center;
     font-size: 1.25rem;
+    padding: 10px 10px;
 }
 
 .grid-cards{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(100px, auto);
     gap: 5px;
     text-align: center;
@@ -209,9 +210,16 @@ footer h1{
     font-size: 2rem;
     text-decoration: none;
 }
+#socialButtons{
+    display: inline-block;
+}
 @media only screen and (max-width: 1275px){
     nav h1{
        display: none;
+    }
+    #socialButtons{
+        display: inline-block;
+        justify-content: end;
     }
 }
 
@@ -219,9 +227,10 @@ footer h1{
     #iconButton{
         display: block ;
     }
-    nav #iconButton {
-        display: none ;
+    #socialButtons{
+        display: flex;
     }
+ 
 }
 
 @media only screen and (max-width: 725px) {
